<resources>
    <string name="app_name">SubmissionGithubApp</string>

    <string name="splashname">SubmissionGithubApp</string>
    <string name="pleasewait">Please wait</string>
    <string name="createdby">Created by</string>
    <string name="myname">Muhammad Ridho Abdillah</string>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>

    <string name="setting">Setting</string>
    <string name="favorite">Favorite</string>
    <string name="dark_mode">Dark Mode</string>
</resources>